fix: N+1 query, timezone, CORS, DB name hardening
- OrderService: batch fetch items with findByOrderIdIn to eliminate N+1 query
- OrderItemRepository: add findByOrderIdIn for batch loading
- buildResponse: overloaded to accept pre-fetched items list
- ReportService: use Asia/Baku timezone instead of systemDefault
- ReportService: remove dead 'PAID' order status check
- cloud-gateway: restrict CORS headers to explicit list, not '*'
- auth-gateway: same CORS restriction
- compose.yml: use POSTGRES_DB variable instead of hardcoded 'resto'